--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -12,10 +12,17 @@
 
   <body>
     {% include nav.html %}
+    <div class="container">
 
-    {{ content }}
+      {{ content }}
 
-    {% include footer.html %}
+      {% include footer.html %}
+
+    </div>
+
+
+		<!-- Javascript -->
+    <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
 
   </body>
 
