adds new script

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -23,6 +23,7 @@
 
 		<!-- Javascript -->
     <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="assets/js/bootstrap.bundle.min.js"></script>
 
   </body>
 
