--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -24,6 +24,8 @@
 		<!-- Javascript -->
     <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="assets/js/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript" src="assets/js/jquery-3.4.1.min.js"></script>
+    <script type="text/javascript" src="assets/js/popper.min.js"></script>
 
   </body>
 
