adds inner content to home.html

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,8 +1,32 @@
 ---
 layout: base
 ---
+  <div class="row">
+    <br><br>
+  </div>
 
-<p>Hello! I'm a paragraph!</p>
-<br>
-<br>
-<br>
+	<div class="page-header">
+		<div class="jumbotron p-3 p-md-5 text-white rounded bg-dark">
+      <div class="col-md-6 px-0">
+        <h1 class="display-4 font-italic">Welcome to the blog!</h1>
+        <p class="lead my-3">Here you'll find a collection of insights, analyses and the occasional opinion</p>
+      </div>
+    </div>
+  </div>
+
+	<div class="row">
+		<div class="col-md-8 blog-main">
+			<h3 class="pb-3 mb-4 font-italic border-bottom">Newest Posts</h3>
+			<div class="blog-post"><!-- Multinomial NB -->
+				<h2 class="blog-post-title">Multinomial Naive Bayes:<br>Classification From Scratch</h2>
+        <p class="text-muted">June 26, 2020</p>
+				<img style="height: 100%; width: 100%; display: block;" src="images/vintage-robot-with-lots-of-black-negative-space.jpg">
+				<br>
+				<p>It's sensible to aspire to precision in Data Science, but facets of the discipline often resemble art more than the methodical nature its name suggests. Such is the case with the Naive Bayes Classification algorithm. For situations with with well defined categories and many variables (features, as they're properly known), a classifier of this sort …</p>
+				<a class="btn btn-primary" href="https://marqdev.wordpress.com/2020/06/26/multinomial-naive-bayes-classification-from-scratch/">Continue Reading</a>
+				<hr>
+      </div><!-- /.blog-post -->
+
+    </div>
+
+    {% include about_elsewhere.html %}
