restores closing div tag

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -28,5 +28,6 @@ layout: base
       </div><!-- /.blog-post -->
 
     </div>
+  </div>
 
-    {% include about_elsewhere.html %}
+  {% include about_elsewhere.html %}
