--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,6 +15,7 @@ layout: base
   </div>
 
 	<div class="row">
+    <!-- Insert templating here for multiple blog posts -->
 		<div class="col-md-8 blog-main">
 			<h3 class="pb-3 mb-4 font-italic border-bottom">Newest Posts</h3>
 			<div class="blog-post"><!-- Multinomial NB -->
