--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -7,6 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<!-- Main CSS -->
 		<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
+		<link rel="shortcut icon" href="favicon.png">
 
 	</head>
 
