--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,10 +1,6 @@
 ---
 layout: base
 ---
-  <div class="row">
-    <p></p>
-    <br>
-  </div>
 
 	<div class="page-header">
 		<div class="jumbotron p-3 p-md-5 text-white rounded bg-dark">
@@ -23,10 +19,10 @@ layout: base
 			<div class="blog-post"><!-- Multinomial NB -->
 				<h2 class="blog-post-title">{{ post.title }}</h2>
 				<p class="text-muted">Posted on {{ post.date | date_to_string: "ordinal", "US" }}</p>
-				<img style="height: 100%; width: 100%; display: block;" src={{ post.featured-image }}>
+				<img style="height: 100%; width: 100%; display: block;" src={{ post.featured-image | absolute_url }}>
 				<br>
 				{{ post.excerpt }}
-				<a class="btn btn-primary" href={{ post.url }}>Continue Reading</a>
+				<a class="btn btn-primary" href={{ post.url | absolute_url }}>Continue Reading</a>
 				<hr>
       </div><!-- blog post -->
 			{% endfor %}
