--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
 <div class="navbar navbar-expand-lg sticky-top navbar-light bg-light">
   <div class="container">
-	  <a class="navbar-brand" href="./">DS Blog</a>
+	  <a class="navbar-brand" href="/">DS Blog</a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
 		  <span class="navbar-toggler-icon"></span>
 	  </button>
@@ -8,7 +8,13 @@
   	<div class="collapse navbar-collapse" id="navbarColor01">
   		<ul class="navbar-nav">
   			<li class="nav-item">
-  				<a class="nav-link" href="../index.html">Home</a>
+  				<a class="nav-link" href="/">Home</a>
+  			</li>
+  			<li class="nav-item">
+  				<a class="nav-link" href="https://www.josemarquez.tech">Portfolio</a>
+  			</li>
+  			<li class="nav-item">
+  				<a class="nav-link" href="/about">About</a>
   			</li>
   		</ul>
   	</div>
