--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -8,7 +8,7 @@
 			  {{ site.title }}
 			{%- endif -%}
 		{% endcapture %}
-			
+
 		<title>{{ title }}</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -38,7 +38,7 @@
 	<script type="text/javascript" src={{ "assets/js/jquery-3.4.1.min.js" | relative_url }}></script>
 	<script type="text/javascript" src={{ "assets/js/popper.min.js" | relative_url }}></script>
 	<script type="text/javascript" src={{ "assets/js/bootstrap.min.js" | relative_url }}></script>
-
+  <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
   </body>
 
 </html>
