--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -13,9 +13,9 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<!-- Main CSS -->
-		<link rel="stylesheet" type="text/css" href={{ "assets/css/bootstrap.min.css" | relative_url }}>
-		<link rel="stylesheet" type="text/css" href={{ "assets/css/codestyle.css" | relative_url }}>
-		<link rel="shortcut icon" href={{ "assets/images/favicon.png" | relative_url }}>
+		<link rel="stylesheet" type="text/css" href={{ "assets/css/bootstrap.min.css" | absolute_url }}>
+		<link rel="stylesheet" type="text/css" href={{ "assets/css/codestyle.css" | absolute_url }}>
+		<link rel="shortcut icon" href={{ "assets/images/favicon.png" | absolute_url }}>
 
 	</head>
 
@@ -35,9 +35,9 @@
 
 
 		<!-- Javascript -->
-	<script type="text/javascript" src={{ "assets/js/jquery-3.4.1.min.js" | relative_url }}></script>
-	<script type="text/javascript" src={{ "assets/js/popper.min.js" | relative_url }}></script>
-	<script type="text/javascript" src={{ "assets/js/bootstrap.min.js" | relative_url }}></script>
+	<script type="text/javascript" src={{ "assets/js/jquery-3.4.1.min.js" | absolute_url }}></script>
+	<script type="text/javascript" src={{ "assets/js/popper.min.js" | absolute_url }}></script>
+	<script type="text/javascript" src={{ "assets/js/bootstrap.min.js" | absolute_url }}></script>
   <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
   </body>
 
