--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -8,13 +8,13 @@
   	<div class="collapse navbar-collapse" id="navbarColor01">
   		<ul class="navbar-nav">
   			<li class="nav-item">
-  				<a class="nav-link" href="/">Home</a>
+  				<a class="nav-link" href={{ "/" | absolute_url }}>Home</a>
   			</li>
   			<li class="nav-item">
   				<a class="nav-link" href="https://www.josemarquez.tech">Portfolio</a>
   			</li>
   			<li class="nav-item">
-  				<a class="nav-link" href="/about">About</a>
+  				<a class="nav-link" href={{ "/about" | absolute_url }}>About</a>
   			</li>
   		</ul>
   	</div>
