--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,8 +4,8 @@ layout: base
 	<div class="page-header">
 		<div class="jumbotron p-3 p-md-5 text-white rounded bg-dark">
       <div class="col-md-6 px-0">
-        <h1 class="display-4 font-italic">Welcome to the blog!</h1>
-        <p class="lead my-3">Here you'll find a collection of insights, analyses and the occasional opinion</p>
+        <h1 class="display-4 font-italic">Welcome to my Data Science blog!</h1>
+        <p class="lead my-3">This is a collection of insights and analyses interrupted by the occasional opinion</p>
       </div>
     </div>
   </div>
