--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
 <div class="navbar navbar-expand-lg sticky-top navbar-light bg-light">
   <div class="container">
-	  <a class="navbar-brand" href="/">DS Blog</a>
+	  <a class="navbar-brand" href={{ "/" | absolute_url }}>DS Blog</a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
 		  <span class="navbar-toggler-icon"></span>
 	  </button>
