quotes image link

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -45,7 +45,7 @@
 		  <meta name="twitter:creator" content="@jlm89" />
 		  <meta name="twitter:title" content="Jose Marquez" />
 		  <meta name="twitter:description" content="DS Blog of Jose Marquez" />
-		  <meta name="twitter:image" content={{ "assets/images/big_bend.jpg" | absolute_url }}>
+		  <meta name="twitter:image" content="{{ "assets/images/big_bend.jpg" | absolute_url }}">
 		  <meta name="theme-color" content="#0085A1">
 		{% endif %}
 
