--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -29,7 +29,7 @@
 		  <meta name="twitter:site" content="@jlm89" />
 		  <meta name="twitter:creator" content="@jlm89" />
 		  <meta name="twitter:title" content={{ page.title }} />
-		  <meta name="twitter:description" content={{ page.excerpt }} />
+		  <meta name="twitter:description" content="{{ page.excerpt | strip_html | xml_escape }}" />
 		  <meta name="twitter:image" content={{ page.featured-image }}>
 		  <meta name="theme-color" content="#0085A1">
 		{% else %}
