quotes title meta for post

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -28,7 +28,7 @@
 			<meta name="twitter:card" content="summary_large_image">
 		  <meta name="twitter:site" content="@jlm89" />
 		  <meta name="twitter:creator" content="@jlm89" />
-		  <meta name="twitter:title" content={{ page.title }} />
+		  <meta name="twitter:title" content="{{ page.title }}" />
 		  <meta name="twitter:description" content="{{ page.excerpt | strip_html | xml_escape }}" />
 		  <meta name="twitter:image" content="{{ page.featured-image | absolute_url }}">
 		  <meta name="theme-color" content="#0085A1">
