--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -21,7 +21,7 @@
 		  <!-- FB OG tags -->
 		  <meta property="og:title" content={{ page.title }} />
 		  <meta property="og:type" content="Blog Post" />
-		  <meta property="og:url" content={{ page.url }} />
+		  <meta property="og:url" content="{{ page.url }}" />
 		  <link rel="canonical" href={{ page.url }} />
 
 			<!-- Twitter summary cards -->
