quotes open graph title

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -19,7 +19,7 @@
 
 		{% if page.layout == "post" %}
 		  <!-- FB OG tags -->
-		  <meta property="og:title" content={{ page.title }} />
+		  <meta property="og:title" content="{{ page.title }}" />
 		  <meta property="og:type" content="website" />
 		  <meta property="og:url" content="{{ page.url }}" />
 		  <link rel="canonical" href={{ page.url }} />
