removes type from link buttons

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -27,8 +27,8 @@ layout: base
 			<nav class="blog-pagination">
 				<div class="d-flex justify-content-center">
 					<div class="btn-group" role="group">
-	  				<a type="button" class="btn btn-secondary" href={{ paginator.next_page_path }}><- Older</a>
-	  				<a type="button" class="btn btn-secondary" href={{ paginator.previous_page_path }}>Newer -></a>
+	  				<a class="btn btn-secondary" href={{ paginator.next_page_path }}><- Older</a>
+	  				<a class="btn btn-secondary" href={{ paginator.previous_page_path }}>Newer -></a>
 					</div>
 				</div>
 			</nav>
